# gst-android-camera2

./: .gitignore  BUILD_AND_DEPLOY.md  README.md  build.gradle  gradle.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/org/freedesktop/gstreamer/camera/: CameraActivity.java  GstAhc.java
app/src/main/jni/: Android.mk  Application.mk  android_camera.c
app/src/main/jni/ahc2sink/: Android.mk  gstahc2sink.c  gstahc2sink.h  gstahc2sinkbypass.c  gstahc2sinkbypass.h  meson.build  plugin.c
app/src/main/jni/ahc2src/: gstahc2hwballocator.c  gstahc2hwbmemory.h  gstahc2hwbpool.c  gstahc2hwbpool.h  gstahc2src.c  gstahc2src.h  meson.build  plugin.c
app/src/main/jni/common/: gstahc2protocol.h
app/src/main/res/layout/: activity_main.xml  autofocus.xml  resolution.xml  white_balance.xml
app/src/main/res/values/: attrs.xml  photography.xml  strings.xml  styles.xml
